[metadata]
name = mara-acl
version = attr: mara_acl.__version__
url = https://github.com/mara/mara-acl
description = Default ACL implementation for Mara
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_acl
python_requires = >= 3.6
install_requires =
    mara-db>=1.3.0
    mara-page>=1.4.0

[options.package_data]
mara_acl = static/**/*, templates/**/*
